src/components/org/PositionCard/styles.less
.context {
    &.container {
        width: var(--container-width);
        padding: var(--container-padding);
        box-sizing: border-box;
        display: flex;
        background-color: var(--color-white);
        border: 1px solid var(--color-black-alt4);
        border-radius: 4px;
        position: relative;
        transition: box-shadow .15s;

        &.isClickable {
            cursor: pointer;

            &:hover, &.isSelected {
                box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2), 0px 4px 5px rgba(0, 0, 0, 0.12), 0px 2px 4px rgba(0, 0, 0, 0.14);
            }

            &.isSelected {
                background-color: var(--color-primary-alt4);
                border-color: var(--color-primary-alt4);
            }
        }

        &.multipleAssignments {
            &::before {
                content: "";
                width: 100%;
                height: 100%;
                position: absolute;
                top: 0;
                left: -2px;
                background-color: var(--color-primary-alt4);
                z-index: -1;
                border-radius: 4px;
                border-color: white;
            }

            .photoContainer {
                cursor: pointer;
            }
        }

        &.isLinked {
            border: 1px dashed var(--color-black-alt3);
        }
    }

    .photoIconContainer {
        user-select: none;
        flex-shrink: 0;
        display: flex;
        flex-direction: column;

        .personIconContainer {
            width: calc(var(--grid-unit) * 5px);
            height: calc(var(--grid-unit) * 5px);
            border-radius: 50%;
            color: var(--color-black-alt2);
            display: flex;
            align-items: center;
            justify-content: center;
            position: relative;

            .instanceCount {
                position: absolute;
                width: calc(var(--grid-unit) * 2.5px);
                height: calc(var(--grid-unit) * 2.5px);
                font-size: 12px;
                font-weight: bold;
                color: var(--color-white);
                background-color: var(--color-red);
                top: calc(var(--grid-unit) * .25px);
                right: 0;
                transform: translateX(50%);
                border-radius: 50%;
                display: flex;
                align-items: center;
                justify-content: center;
            }
        }

        .linkedIcon{
            position: relative;
            display: flex;
            justify-content: center;
        }
    }

    .positionInstance {
        position: relative;
        flex-grow: 1;
        margin-left: var(--photo-and-details-spacing);
        width: 1px;
        min-height: calc(var(--grid-unit)* 7px);

        .assignedPersonName span, .basePositionName span, .positionName span {
            display: inline-block;
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
            max-width: 100%;
        }

        .basePositionName, .location, .period {
            font-size: var(--small-section-font-size);
            line-height: var(--small-section-line-height);
        }

        .positionName {
            font-size: var(--big-section-font-size);
            margin-bottom: var(--position-name-spacing);
            line-height: var(--big-section-line-height);
            color: var(--color-primary);
            display: flex;

            span {            
                text-decoration: underline;
            }
        }

        .assignedPersonName {
            font-size: var(--big-section-font-size);
            line-height: var(--big-section-line-height);
            margin-right: calc(var(--grid-unit) * 6px);
            display: flex;

        }
        .basePositionName{
            display: flex;
            margin-right: calc(var(--grid-unit) * 6px);
        }
    
        .externalId {
                padding-left: calc(var(--grid-unit) * .5px);
                position: absolute;
                top: 0;
                right: 0;
                display: flex;
                align-items: center;
                font-size: var(--small-section-font-size);
                line-height: var(--small-section-line-height);
        }

        .childPositionCount {
                position: absolute;
                display: flex;
                flex-direction: column;
                right: 0;
                top: 0;
                width: 100%;
                align-items: center;
                padding-top: calc(var(--grid-unit) * 1px)
        } 

        .expandButton {
            position: absolute;
            right: 0;
            bottom: 0;
        }

        &.cropPositionName{
            .positionName span{
                margin-right: calc(var(--grid-unit) * 6px);
            }
        }

        .instanceTimelineContainer {
            position: relative;
            height: calc(var(--grid-unit) * 1px);
            border-radius: 4px;
            overflow: hidden;
            width: calc(var(--grid-unit) * 23px);

            .instance{
                height: 100%;
                position: absolute;

                .instanceLine {
                    left: 0;
                    right: 0;
                    top: 50%;
                    transform: translateY(-50%);
                    position: absolute;
                    height: calc(var(--grid-unit) * .5px - 2px);
                    display: flex;
                    align-items: center;
                    background: var(--instance-color);
                    box-sizing: border-box;
                    padding: 0 calc(var(--grid-unit) * 1px) 0 calc(var(--grid-unit) * 2px);
    
                    
                }
                .dot {
                    background: var(--instance-color);
                    border-radius: 50%;
                    top: 50%;
                    transform: translateY(-50%);
                    box-sizing: border-box;
                    height: calc(var(--grid-unit) * .5px);
                    width: calc(var(--grid-unit) * .5px);
                    position: absolute;

                    &.right{
                        right: 0;
                    }
    
                }

                &.isCurrent {
                    --instance-color: var(--color-primary);
                }
                &:not(.isCurrent){
                    --instance-color: var(--color-primary-alt1);
                }

                &.hasUnAssignedPerson {
                    .instanceLine{
                        background: repeating-linear-gradient(
                            to right,
                            var(--instance-color),
                            var(--instance-color) calc(var(--grid-unit) * 1px),
                            rgba(0,0,0,0) calc(var(--grid-unit) * 1px),
                            rgba(0,0,0,0) calc(var(--grid-unit) * 1.5px)
                          );
                    }

                }
 
            }
           
        }
    }

    &.instancesPopover {
        pointer-events: all;
        position: absolute;
        left: calc(100% + (var(--grid-unit) * 2px));
        background: white;
        border: 1px solid var(--color-black-alt4);
        border-radius: 4px;
        overflow: visible;;
    
        .instanceWrapper {
            display: flex;
            width: var(--container-width);
            border-bottom: 1px solid var(--color-black-alt4);
            padding: var(--container-padding);
            box-sizing: border-box;
            transition: box-shadow .15s;

            &:hover {
                box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2), 0px 4px 5px rgba(0, 0, 0, 0.12), 0px 2px 4px rgba(0, 0, 0, 0.14);
            }

            &:first-child {
                border-radius: 4px 4px 0 0;
            }

            &:last-child {
                border: none;
                border-radius: 0 0 4px 4px;
            }
        }
    }

    &.comfortable {
        --container-width: calc(var(--grid-unit) * 40px);
        --container-height: calc(var(--grid-unit) * 14px);
        --container-padding: calc(var(--grid-unit) * 1px);
        --photo-and-details-spacing: calc(var(--grid-unit) * 2px);
        --position-name-spacing: calc(var(--grid-unit) * 1px);

        --small-section-font-size: 11px;
        --small-section-line-height: 16px;

        --big-section-line-height: 16px;
        --big-section-font-size: 16px;
    }

    &.compact {
        --container-width: calc(var(--grid-unit) * 35px);
        --container-height: calc(var(--grid-unit) * 12px);
        --container-padding: calc(var(--grid-unit) * 1px);
        --photo-and-details-spacing: calc(var(--grid-unit) * 1px);
        --position-name-spacing: calc(var(--grid-unit) * .5px);

        --small-section-font-size: 10px;
        --small-section-line-height: 12px;

        --big-section-line-height: 16px;
        --big-section-font-size: 14px;
    }
}

